--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,5 @@
 
-/******************* Mixin ******************/
+/********************* Mixin ******************/
 
 
 /******************* Extend ******************/
